[package]
name = "pretok"
version = "0.1.0"
authors = ["Steve King <sk@metrokings.com>"]
edition = "2018"
description = "A string pre-tokenizer for C-like syntaxes to simplify subsequent tokenizers."
license = "MIT"
keywords = ["text"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strcursor = "0.2.5"

[dev-dependencies]
assert_cmd = "1.0.1"
